# ChangeLog for dev-php5/onphp-module
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/onphp-module/Attic/ChangeLog,v 1.29 2008/01/21 01:00:27 voxus Exp $

*onphp-module-1.0.1 (21 Jan 2008)
*onphp-module-0.10.9 (21 Jan 2008)

  21 Jan 2008; Konstantin V. Arkhipov <voxus@gentoo.org>
  +onphp-module-0.10.9.ebuild, +onphp-module-1.0.1.ebuild:
  Double bump.

  05 Jan 2008; Konstantin V. Arkhipov <voxus@gentoo.org>
  onphp-module-0.10.8.ebuild, onphp-module-1.0.0.ebuild:
  License fixed.

*onphp-module-1.0.0 (05 Jan 2008)

  05 Jan 2008; Konstantin V. Arkhipov <voxus@gentoo.org>
  -onphp-module-0.10.0.ebuild, onphp-module-0.10.8.ebuild,
  +onphp-module-1.0.0.ebuild:
  Version bump.

*onphp-module-0.10.8 (09 Dec 2007)

  09 Dec 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
  -files/onphp-module-0.10.7-wrong_propagation.patch,
  -onphp-module-0.10.7.ebuild, +onphp-module-0.10.8.ebuild:
  Version bump.

  20 Oct 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
  -files/onphp-module-r2861.patch,
  +files/onphp-module-0.10.7-wrong_propagation.patch,
  onphp-module-0.10.7.ebuild:
  Added trivial patch from upstream's r4389.

*onphp-module-0.10.7 (20 Oct 2007)

  20 Oct 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
  -onphp-module-0.10.6.ebuild, +onphp-module-0.10.7.ebuild:
  Version bump.

*onphp-module-0.10.6 (14 Oct 2007)

  14 Oct 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
  -onphp-module-0.10.3.ebuild, -onphp-module-0.10.4.ebuild,
  +onphp-module-0.10.6.ebuild:
  Version bump.

*onphp-module-0.10.4 (01 Sep 2007)

  01 Sep 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
  +onphp-module-0.10.4.ebuild:
  Version bump.

*onphp-module-0.10.3 (12 Jul 2007)

  12 Jul 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
  -onphp-module-0.10.1.ebuild, +onphp-module-0.10.3.ebuild:
  Version bump.

*onphp-module-0.10.1 (02 Jun 2007)

  02 Jun 2007; Konstantin V. Arkhipov <voxus@gentoo.org>