@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/onphp-module/Attic/onphp-module-1.0.0.ebuild,v 1.2 2008/01/05 23:16:55 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/onphp-module/Attic/onphp-module-1.0.2.ebuild,v 1.1 2008/02/28 19:07:40 voxus Exp $
 
 PHP_EXT_NAME="onphp"
 PHP_EXT_INI="yes"
@@ -30,5 +30,5 @@ S="${WORKDIR}/onphp-${PV}/ext"
 pkg_setup() {
 	has_php
 
-	require_php_with_use spl reflection
+	require_php_with_use spl
 }
