@@ -1,10 +1,10 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/onphp/Attic/onphp-1.0.1.ebuild,v 1.1 2008/01/21 01:00:21 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/onphp/Attic/onphp-1.0.1.ebuild,v 1.2 2008/02/28 19:06:48 voxus Exp $
 
 inherit php-lib-r1
 
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 x86"
 
 DESCRIPTION="onPHP is the LGPL'ed multi-purpose object-oriented PHP framework."
 HOMEPAGE="http://onphp.org/"
