@@ -1,6 +1,14 @@
 # ChangeLog for dev-php5/onphp
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/onphp/Attic/ChangeLog,v 1.55 2008/01/21 01:00:21 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/onphp/Attic/ChangeLog,v 1.56 2008/02/28 19:06:48 voxus Exp $
+
+*onphp-1.0.2 (28 Feb 2008)
+*onphp-0.10.10 (28 Feb 2008)
+
+  28 Feb 2008; Konstantin V. Arkhipov <voxus@gentoo.org>
+  -onphp-0.10.8.ebuild, onphp-0.10.9.ebuild, +onphp-0.10.10.ebuild,
+  -onphp-1.0.0.ebuild, onphp-1.0.1.ebuild, +onphp-1.0.2.ebuild:
+  Dobule bump, stabilization.
 
 *onphp-1.0.1 (21 Jan 2008)
 *onphp-0.10.9 (21 Jan 2008)
