@@ -1,6 +1,15 @@
 # ChangeLog for dev-php5/onphp-module
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/onphp-module/Attic/ChangeLog,v 1.29 2008/01/21 01:00:27 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/onphp-module/Attic/ChangeLog,v 1.30 2008/02/28 19:07:40 voxus Exp $
+
+*onphp-module-1.0.2 (28 Feb 2008)
+*onphp-module-0.10.10 (28 Feb 2008)
+
+  28 Feb 2008; Konstantin V. Arkhipov <voxus@gentoo.org>
+  -onphp-module-0.10.8.ebuild, onphp-module-0.10.9.ebuild,
+  +onphp-module-0.10.10.ebuild, -onphp-module-1.0.0.ebuild,
+  onphp-module-1.0.1.ebuild, +onphp-module-1.0.2.ebuild:
+  Dobule bump, stabilization.
 
 *onphp-module-1.0.1 (21 Jan 2008)
 *onphp-module-0.10.9 (21 Jan 2008)
